# taskcli

./: .gitignore  LICENSE  README.md  pyproject.toml
taskcli/: cli.py  models.py  storage.py  utils.py
tests/: test_models.py
