[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskcli"
version = "0.1.0"
description = "Um gerenciador de tarefas via linha de comando (CLI)"
readme = "README.md"
authors = [
  { name="Seu Nome", email="seu@email.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
taskcli = "taskcli.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]